[package]
name = "klownie_matrix"
version = "0.1.2"
edition = "2021"
authors = ["Audrick YEU <audrickyeu@proton.me>"]
description = "My personnel project on matrices"
license = "GPL-3.0-or-later"
keywords = ["klownie", "matrices"]
readme = "README.md"
repository = "https://github.com/klownie/klownie_matrix_rs"
homepage = "https://github.com/klownie/klownie_matrix_rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
