[package]
name = "klownie_matrice"
version = "0.1.3"
edition = "2021"
authors = ["Audrick YEU <audrickyeu@proton.me>"]
description = "My personnel project on matrices"
license = "GPL-3.0-or-later"
keywords = ["klownie", "matrices"]
readme = "README.md"
repository = "https://github.com/klownie/klownie_matrice_rs"
homepage = "https://github.com/klownie/klownie_matrice_rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
